welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:22: error: Missing closing brace `}' assumed here
  }
  ^SnakeBuggle:31: error: Missing closing brace `}' assumed here
  }
  ^SnakeBuggle:40: error: Missing closing brace `}' assumed here
    gauche()
    ^